crates/snapshot-tests/tests/snapshots/parser__redefine__table_then_table.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[DuplicateTable]: redefinition of table `a`
  ┌─ table_then_table:5:1
  │    
2 │ ╭   [a]
3 │ │   foo="bar"
4 │ │   b = { foo = "bar" }
  │ ╰─────────────────────' first table instance
5 │   ╭ [a]
6 │   │ 
  │   ╰^ duplicate table


error: redefinition of table `a`
 --> table_then_table:5:1
  |
2 | / [a]
3 | | foo="bar"
4 | | b = { foo = "bar" }
  | |___________________- first table instance
5 |   [a]
  |   ^^^ duplicate table
Error {
    kind: "DuplicateTable",
    message: "redefinition of table",
    span: 35..39,
    path: Some(
        "a",
    ),
}
